# scriptum

./: .gitignore  README.md  package-lock.json
docs/: design.md  onboarding.md  tauri-migration-plan.md  testing.md
electron/: main.js  package-lock.json  package.json  preload.js
src/: books.html  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/commands/: books_read.rs  mod.rs  my_library.rs  reading_list.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src/css/: base.css  matrix-code.css  nordic-dark.css  nordic-light.css
src/css/themes/: matrix.css  nordic-dark.css  nordic-light.css
src/js/: category-management.js  constants.js  core.js  dashboard.js  data-manager.js  db-manager-tauri.js  db-manager-web.js  db-manager.js  file.js  isbn.js  my-library.js  read-books.js  reading-list.js  restore.js  statistics.js  tags.js  version.js
src/utilities/: cleanup.py  isbn_transfer.py
