[package]
name = "scriptum"
version = "0.7.0"
description = "Scriptum — Book Tracker"
authors = ["Sparsile"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "scriptum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
rusqlite    = { version = "0.32", features = ["bundled"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
dirs-next   = "2"
log         = "0.4"
tauri                = { version = "2.11.3", features = [] }
tauri-plugin-dialog  = "2"
tauri-plugin-fs      = "2"
tauri-plugin-log     = "2"
tauri-plugin-shell   = "2"
